--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "async": "2.6.1",
     "aws-sdk": "2.263.1",
     "bn.js": "4.11.8",
+    "ln-service": "26.0.0",
     "vali-date": "1.0.0"
   },
   "description": "Record keeping for Lightning Network graph updates",
@@ -17,5 +18,5 @@
   "scripts": {
     "start": "node server"
   },
-  "version": "0.0.4"
+  "version": "0.1.0"
 }
