--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "author": "Alex Bosworth",
   "dependencies": {
+    "a-star-for-async-data": "1.0.3",
     "async": "2.6.1",
-    "aws-sdk": "2.387.0",
+    "aws-sdk": "2.395.0",
     "bolt07": "1.4.0",
     "bn.js": "4.11.8",
-    "ln-service": "32.0.1",
-    "node-lmdb": "0.6.0",
+    "ln-service": "33.1.0",
+    "node-lmdb": "0.6.2",
     "vali-date": "1.0.0"
   },
   "description": "Record keeping for Lightning Network graph updates",
   "devDependencies": {
     "rimraf": "2.6.3",
-    "tap": "12.1.1",
+    "tap": "12.5.0",
     "uuid": "3.3.2"
   },
   "license": "MIT",
@@ -25,5 +26,5 @@
   "scripts": {
     "test": "tap test/dates/*.js test/lmdb/*.js test/statistics/*.js"
   },
-  "version": "2.0.2"
+  "version": "2.0.3"
 }
