--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "author": "Alex Bosworth",
   "dependencies": {
-    "async": "2.6.2",
-    "aws-sdk": "2.448.0",
+    "async": "3.0.0",
+    "asyncjs-util": "1.0.0",
+    "aws-sdk": "2.461.0",
     "bolt07": "1.4.0",
     "bn.js": "4.11.8",
-    "ln-service": "36.3.1",
+    "ln-service": "38.0.0",
     "node-lmdb": "0.6.2",
     "vali-date": "1.0.0"
   },
   "description": "Record keeping for Lightning Network graph updates",
   "devDependencies": {
     "rimraf": "2.6.3",
-    "tap": "13.1.2",
+    "tap": "14.1.7",
     "uuid": "3.3.2"
   },
   "license": "MIT",
@@ -23,7 +24,7 @@
     "url": "https://github.com/alexbosworth/ln-graph.git"
   },
   "scripts": {
-    "test": "tap test/dates/*.js test/lmdb/*.js test/statistics/*.js"
+    "test": "tap test/chains/*.js test/dates/*.js test/lmdb/*.js test/statistics/*.js"
   },
-  "version": "2.2.3"
+  "version": "2.2.4"
 }
