--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "author": "Alex Bosworth",
   "dependencies": {
     "async": "3.2.0",
-    "asyncjs-util": "1.2.3",
-    "aws-sdk": "2.808.0",
-    "bolt07": "1.6.0",
-    "bn.js": "5.1.3",
-    "ln-service": "50.9.4",
-    "node-lmdb": "0.9.3",
+    "asyncjs-util": "1.2.5",
+    "aws-sdk": "2.894.0",
+    "bn.js": "5.2.0",
+    "bolt07": "1.7.2",
+    "ln-service": "51.7.0",
+    "lodash": "4.17.21",
+    "node-lmdb": "0.9.4",
     "vali-date": "1.0.0"
   },
   "description": "Record keeping for Lightning Network graph updates",
   "devDependencies": {
     "rimraf": "3.0.2",
-    "tap": "14.11.0",
+    "tap": "15.0.5",
     "uuid": "8.3.2"
   },
   "license": "MIT",
@@ -24,7 +25,7 @@
     "url": "https://github.com/alexbosworth/ln-graph.git"
   },
   "scripts": {
-    "test": "tap test/chains/*.js test/dates/*.js test/lmdb/*.js test/statistics/*.js"
+    "test": "tap --branches=1 --functions=1 --lines=1 --statements=1 test/chains/*.js test/dates/*.js test/lmdb/*.js test/statistics/*.js"
   },
-  "version": "2.2.14"
+  "version": "2.2.15"
 }
