--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "author": "Alex Bosworth",
   "dependencies": {
-    "async": "3.2.2",
-    "asyncjs-util": "1.2.6",
-    "aws-sdk": "2.1354.0",
-    "bn.js": "5.2.0",
-    "bolt07": "1.7.3",
-    "ln-service": "54.3.3",
+    "async": "3.2.4",
+    "asyncjs-util": "1.2.11",
+    "aws-sdk": "2.1375.0",
+    "bn.js": "5.2.1",
+    "bolt07": "1.8.3",
+    "ln-service": "56.3.0",
     "lodash": "4.17.21",
-    "node-lmdb": "0.9.4",
     "vali-date": "1.0.0"
   },
   "description": "Record keeping for Lightning Network graph updates",
   "devDependencies": {
-    "rimraf": "3.0.2",
-    "tap": "15.0.10",
-    "uuid": "8.3.2"
+    "@alexbosworth/tap": "15.0.12"
   },
   "license": "MIT",
   "main": "index.js",
@@ -25,7 +22,7 @@
     "url": "https://github.com/alexbosworth/ln-graph.git"
   },
   "scripts": {
-    "test": "tap --branches=1 --functions=1 --lines=1 --statements=1 test/chains/*.js test/dates/*.js test/lmdb/*.js test/statistics/*.js"
+    "test": "tap --branches=1 --functions=1 --lines=1 --statements=1 test/chains/*.js test/dates/*.js test/statistics/*.js"
   },
-  "version": "2.2.17"
+  "version": "3.0.0"
 }
